--- a/htmls - biofresco/style_.css
+++ b/htmls - biofresco/style_.css
@@ -26,8 +26,13 @@ body {
         }
 
         .notbutt {
-            height: 100px;
+            height: 50px;
+            transition: transform 0.2s
         
+        }
+
+        .notbutt:hover{
+            transform: scale(1.1);
         }
 
         .navbar {
@@ -154,4 +159,5 @@ body {
             padding: 10px;
             text-align: center;
             margin-top: 40px;
+
         }
